--- a/src/Nestable/Nestable.styl
+++ b/src/Nestable/Nestable.styl
@@ -10,6 +10,15 @@
   > .nestable-list
     padding 0
 
+.nestable-rtl
+  position relative
+  .nestable-list-rtl
+    margin 0
+    padding 0 0 0 40px
+    list-style-type none
+  > .nestable-list-rtl
+    padding 0
+
 .nestable-item
 .nestable-item-copy
   margin 10px 0 0
@@ -19,9 +28,33 @@
     margin-top 10px
 
 .nestable-item
+.nestable-item-copy
+  margin 10px 0 0
+  &:first-child
+    margin-top 0
+  .nestable-list-rtl
+    margin-top 10px
+
+.nestable-item
   position relative
   &.is-dragging
     .nestable-list
+      pointer-events none
+    *
+      opacity 0
+    &:before
+      content ' '
+      absolute top left
+      right 0
+      bottom 0
+      background skyblue
+      border 1px dashed steelblue
+      border-radius 5px
+
+.nestable-item
+  position relative
+  &.is-dragging
+    .nestable-list-rtl
       pointer-events none
     *
       opacity 0
@@ -47,6 +80,10 @@
     absolute top left
     padding 0
 
-
-
-
+.nestable-drag-layer
+  fixed top left
+  z-index 100
+  pointer-events none
+  > .nestable-list-rtlss
+    absolute top left
+    padding 0
